Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
5.9.2, 5.10.0
-
None
-
Linux Mint 17.3, gcc, 64 bit
Windows 10, msvc2017, 64 bit
Description
The following minimal QML code crashes Qt 5.9 and Qt 5.9.1 on Linux and Windows. Real-world bind examples crash too.
Qt 5.8 and Qt 5.7.1 are not affected.
Component.onCompleted: { function foo() { return "I am foo" } var bound = foo.bind() Qt.binding(bound) }